# gamebot

./: .gitignore  Dockerfile  pyproject.toml
gamebot/: helper.py  main.py
gamebot/adapters/: blhblh.py  protocol.py
gamebot/bots/: coin_bot.py  dice_bot.py  log_bot.py
gamebot/bots/blackjack/: blackjack_bot.py  blackjack_game.py
gamebot/bots/cat/: cat_api.py  cat_bot.py
gamebot/bots/dog/: dog_api.py  dog_bot.py
